--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
