--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-storybook": "^0.9.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "sass-embedded": "^1.83.1",
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
