--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL=http://localhost:8088 
-
+VITE_API_BASE_URL=http://localhost:3031/api/v1
+VITE_API_HOST=http://localhost:3031
 VITE_API_KEY = AIzaSyCzGJmWi6Iaywtai_skfwyf-f_yShg-tnM
