--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emoji-picker-react": "^4.12.0",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
