--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "socket.io": "^4.8.1",
